autogen/prototype/proto/c/src/v1.9/containers/Regions1d.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Regions1d is the basic handle type in this file. Example:
//    // Create a default Regions1d object:
//    Regions1d handle = Regions1dDefault();
// Functions involving Regions1d are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_PROTO_V1_9_CONTAINERS_REGIONS1D
#define C_INTERFACE_PROTO_V1_9_CONTAINERS_REGIONS1D

#include "GNDStk.h"
#include "v1.9/containers/Axes.h"
#include "v1.9/containers/XYs1d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct Regions1dClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Regions1d
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct Regions1dClass *Regions1d;

// --- Const-aware handles.
typedef const struct Regions1dClass *const ConstHandle2ConstRegions1d;
typedef       struct Regions1dClass *const ConstHandle2Regions1d;
typedef const struct Regions1dClass *      Handle2ConstRegions1d;
typedef       struct Regions1dClass *      Handle2Regions1d;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstRegions1d
Regions1dDefaultConst();

// +++ Create, default
extern_c Handle2Regions1d
Regions1dDefault();

// --- Create, general, const
extern_c Handle2ConstRegions1d
Regions1dCreateConst(
   const char *const label,
   const double outerDomainValue,
   ConstHandle2ConstAxes axes,
   ConstHandle2XYs1d *const XYs1d, const size_t XYs1dSize
);

// +++ Create, general
extern_c Handle2Regions1d
Regions1dCreate(
   const char *const label,
   const double outerDomainValue,
   ConstHandle2ConstAxes axes,
   ConstHandle2XYs1d *const XYs1d, const size_t XYs1dSize
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
Regions1dAssign(ConstHandle2Regions1d self, ConstHandle2ConstRegions1d from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
Regions1dDelete(ConstHandle2ConstRegions1d self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
Regions1dRead(ConstHandle2Regions1d self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
Regions1dWrite(ConstHandle2ConstRegions1d self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
Regions1dPrint(ConstHandle2ConstRegions1d self);

// +++ Print to standard output, as XML
extern_c int
Regions1dPrintXML(ConstHandle2ConstRegions1d self);

// +++ Print to standard output, as JSON
extern_c int
Regions1dPrintJSON(ConstHandle2ConstRegions1d self);


// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Regions1dLabelHas(ConstHandle2ConstRegions1d self);

// +++ Get
// +++ Returns by value
extern_c const char *
Regions1dLabelGet(ConstHandle2ConstRegions1d self);

// +++ Set
extern_c void
Regions1dLabelSet(ConstHandle2Regions1d self, const char *const label);


// -----------------------------------------------------------------------------
// Metadatum: outerDomainValue
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Regions1dOuterDomainValueHas(ConstHandle2ConstRegions1d self);

// +++ Get
// +++ Returns by value
extern_c double
Regions1dOuterDomainValueGet(ConstHandle2ConstRegions1d self);

// +++ Set
extern_c void
Regions1dOuterDomainValueSet(ConstHandle2Regions1d self, const double outerDomainValue);


// -----------------------------------------------------------------------------
// Child: axes
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Regions1dAxesHas(ConstHandle2ConstRegions1d self);

// --- Get, const
extern_c Handle2ConstAxes
Regions1dAxesGetConst(ConstHandle2ConstRegions1d self);

// +++ Get, non-const
extern_c Handle2Axes
Regions1dAxesGet(ConstHandle2Regions1d self);

// +++ Set
extern_c void
Regions1dAxesSet(ConstHandle2Regions1d self, ConstHandle2ConstAxes axes);


// -----------------------------------------------------------------------------
// Child: XYs1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Regions1dXYs1dHas(ConstHandle2ConstRegions1d self);

// +++ Clear
extern_c void
Regions1dXYs1dClear(ConstHandle2Regions1d self);

// +++ Size
extern_c size_t
Regions1dXYs1dSize(ConstHandle2ConstRegions1d self);

// +++ Add
extern_c void
Regions1dXYs1dAdd(ConstHandle2Regions1d self, ConstHandle2ConstXYs1d XYs1d);

// --- Get, by index \in [0,size), const
extern_c Handle2ConstXYs1d
Regions1dXYs1dGetConst(ConstHandle2ConstRegions1d self, const size_t index_);

// +++ Get, by index \in [0,size), non-const
extern_c Handle2XYs1d
Regions1dXYs1dGet(ConstHandle2Regions1d self, const size_t index_);

// +++ Set, by index \in [0,size)
extern_c void
Regions1dXYs1dSet(
   ConstHandle2Regions1d self,
   const size_t index_,
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Has, by index
extern_c int
Regions1dXYs1dHasByIndex(
   ConstHandle2ConstRegions1d self,
   const int index
);

// --- Get, by index, const
extern_c Handle2ConstXYs1d
Regions1dXYs1dGetByIndexConst(
   ConstHandle2ConstRegions1d self,
   const int index
);

// +++ Get, by index, non-const
extern_c Handle2XYs1d
Regions1dXYs1dGetByIndex(
   ConstHandle2Regions1d self,
   const int index
);

// +++ Set, by index
extern_c void
Regions1dXYs1dSetByIndex(
   ConstHandle2Regions1d self,
   const int index,
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Has, by interpolation
extern_c int
Regions1dXYs1dHasByInterpolation(
   ConstHandle2ConstRegions1d self,
   const enums::Interpolation interpolation
);

// --- Get, by interpolation, const
extern_c Handle2ConstXYs1d
Regions1dXYs1dGetByInterpolationConst(
   ConstHandle2ConstRegions1d self,
   const enums::Interpolation interpolation
);

// +++ Get, by interpolation, non-const
extern_c Handle2XYs1d
Regions1dXYs1dGetByInterpolation(
   ConstHandle2Regions1d self,
   const enums::Interpolation interpolation
);

// +++ Set, by interpolation
extern_c void
Regions1dXYs1dSetByInterpolation(
   ConstHandle2Regions1d self,
   const enums::Interpolation interpolation,
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Has, by label
extern_c int
Regions1dXYs1dHasByLabel(
   ConstHandle2ConstRegions1d self,
   const char *const label
);

// --- Get, by label, const
extern_c Handle2ConstXYs1d
Regions1dXYs1dGetByLabelConst(
   ConstHandle2ConstRegions1d self,
   const char *const label
);

// +++ Get, by label, non-const
extern_c Handle2XYs1d
Regions1dXYs1dGetByLabel(
   ConstHandle2Regions1d self,
   const char *const label
);

// +++ Set, by label
extern_c void
Regions1dXYs1dSetByLabel(
   ConstHandle2Regions1d self,
   const char *const label,
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Has, by outerDomainValue
extern_c int
Regions1dXYs1dHasByOuterDomainValue(
   ConstHandle2ConstRegions1d self,
   const double outerDomainValue
);

// --- Get, by outerDomainValue, const
extern_c Handle2ConstXYs1d
Regions1dXYs1dGetByOuterDomainValueConst(
   ConstHandle2ConstRegions1d self,
   const double outerDomainValue
);

// +++ Get, by outerDomainValue, non-const
extern_c Handle2XYs1d
Regions1dXYs1dGetByOuterDomainValue(
   ConstHandle2Regions1d self,
   const double outerDomainValue
);

// +++ Set, by outerDomainValue
extern_c void
Regions1dXYs1dSetByOuterDomainValue(
   ConstHandle2Regions1d self,
   const double outerDomainValue,
   ConstHandle2ConstXYs1d XYs1d
);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v1.9/containers/Regions1d/src/custom.h"

#undef extern_c
#endif